# lens

./: .gitignore  Makefile  README.md  file_structure.md  mypy.ini  pull_request_template.md  pyproject.toml
.github/workflows/: linting.yml  testing.yml
lens/: core.py  descriptor.py  main.py  metadata.py
lens/test/: common.py  test_core.py  test_hostname.py  test_metadata.py
lens/test/testing_data/: metadata.json
lens/test/testing_data/avax/depth/: 2025-02-21.csv  2025-02-22.csv  2025-02-23.csv
lens/test/testing_data/avax/trades/: 2025-02-21.csv  2025-02-22.csv  2025-02-23.csv
lens/util/: hostname.py  paths.py
