[project]
name = "lens"
version = "0.1.0"
description = ""
authors = [
    {name = "Ethan Havemann",email = "echavemann@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ruff (>=0.11.8,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
