[project]
name = "lens"
version = "0.1.0"
description = ""
authors = [
    {name = "Ethan Havemann",email = "echavemann@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ruff (>=0.11.8,<0.12.0)",
    "mypy (>=1.15.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

### --- ruff
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # pyupgrade
    "UP",
    # pylint - bugbear
    "B",
    ]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["F401"]
